# avivi-auto

./: .gitignore  README.md  pyproject.toml  test_ops_dashboard_api.py
Avivi_Client/avivi_client/: __main__.py  config.py  storage.py
Avivi_Client/avivi_client/bootstrap/: deps.py
Avivi_Client/avivi_client/node_bridge/: index.js  package.json
Avivi_Client/avivi_client/services/: __init__.py  ai_router.py  command_poll.py  crypto_util.py  db_scanner.py  enroll.py  heartbeat_worker.py  master_events.py  messaging.py  mission_runner.py  mission_sync.py  poll_worker.py  telegram_owner.py  watchdog.py
Avivi_Client/avivi_client/ui/: main_window.py
Avivi_Master/avivi_master/: __main__.py  config.py  db.py  deps.py  init_db.py  main.py  models_db.py  telegram_master.py
Avivi_Master/avivi_master/jobs/: __init__.py  roi_nightly.py
Avivi_Master/avivi_master/routers/: admin.py  commands.py  enroll.py  events.py  heartbeat.py  missions.py  relay.py
Avivi_Master/avivi_master/services/: __init__.py  client_crypto.py  fleet.py  roi.py
OpenClaw_Launcher/openclaw_launcher/: __init__.py  __main__.py  config_model.py  paths.py  paths_openclaw.py
OpenClaw_Launcher/openclaw_launcher/services/: activity_feed.py  (+16 more)
marketing/: index.html
packaging/: DISTRIBUTION.txt  INSTALL-HE.txt  avivi-client.spec  avivi-master.spec  build.ps1  env.master.example  frozen_client.py  frozen_master.py
release/: README-CLIENT-HE.txt  install.ps1  pack.ps1  run.ps1  uninstall.ps1  update.ps1
shared/avivi_shared/: __init__.py  crypto.py  models.py
tests/: test_api.py  test_crypto.py
(+3 files in other folders)
